--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,18 +54,22 @@
                     android:imeOptions="actionSearch"
                     android:importantForAutofill="no"
                     android:inputType="text"
-                    android:padding="10dp"
+                    android:padding="12dp"
                     tools:ignore="LabelFor" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
                     android:layout_weight="1"
+                    android:src="@drawable/ic_search"
                     android:background="@drawable/rounded_button"
                     android:onClick="startSearch"
-                    android:text="Search"
                     android:textColor="#FFFFFF" />
             </LinearLayout>
 
@@ -90,7 +94,7 @@
                     android:background="@drawable/chip_background"
                     android:button="@android:color/transparent"
                     android:padding="6dp"
-                    android:text="Sort by hot"
+                    android:text="Hot"
                     app:checkedIcon="@null"
                     app:checkedIconEnabled="false" />
 
@@ -101,7 +105,7 @@
                     android:background="@drawable/chip_background"
                     android:button="@android:color/transparent"
                     android:padding="6dp"
-                    android:text="Sort by new"
+                    android:text="New"
                     app:checkedIcon="@null"
                     app:checkedIconEnabled="false" />
 
@@ -112,122 +116,16 @@
                     android:background="@drawable/chip_background"
                     android:button="@android:color/transparent"
                     android:padding="6dp"
-                    android:text="Sort by top"
+                    android:text="Top"
                     app:checkedIcon="@null"
                     app:checkedIconEnabled="false" />
             </com.google.android.material.chip.ChipGroup>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/subInfo"
-                style="@style/cardViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/sorting"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
-                android:onClick="toggleSubInfo"
-                android:padding="6dp">
-
-                <TextView
-                    android:id="@+id/infoTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="14dp"
-                    android:gravity="center"
-                    android:text="Sub Info"
-                    android:textColor="@color/textColor"
-                    android:textSize="22sp" />
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:onClick="toggleSubInfo">
-
-                    <LinearLayout
-                        android:id="@+id/subInfoLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:onClick="toggleSubInfo"
-                        android:orientation="vertical"
-                        android:visibility="gone">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/subIcon"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="14dp"
-                                android:layout_marginTop="14dp"
-                                android:layout_marginEnd="14dp"
-                                android:background="@drawable/rounded_sub"
-                                android:contentDescription="sub icon"
-                                android:padding="4dp"
-                                android:src="@drawable/ic_android" />
-
-                            <TextView
-                                android:id="@+id/subName"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginTop="14dp"
-                                android:layout_marginEnd="14dp"
-                                android:gravity="center_vertical"
-                                android:text="Name"
-                                android:textColor="@color/textColor"
-                                android:textSize="24sp" />
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/subSubs"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="14dp"
-                            android:layout_marginTop="6dp"
-                            android:layout_marginEnd="14dp"
-                            android:layout_marginBottom="8dp"
-                            android:gravity="center_vertical"
-                            android:text="Subscribers: 1,000,000"
-                            android:textColor="@color/secondary"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:id="@+id/subDesc"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="14dp"
-                            android:layout_marginEnd="14dp"
-                            android:layout_marginBottom="2dp"
-                            android:gravity="center_vertical"
-                            android:text="This is a description of the subreddit"
-                            android:textColor="@color/textColor"
-                            android:textSize="18sp" />
-
-                        <ImageView
-                            android:id="@+id/collapseInfo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:contentDescription="Collapse"
-                            android:onClick="toggleSubInfo"
-                            android:src="@drawable/ic_up" />
-                    </LinearLayout>
-                </ScrollView>
-            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/subInfo"
+                android:layout_below="@id/sorting"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
                 android:gravity="center"
@@ -241,7 +139,7 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/subInfo"
+                android:layout_below="@id/sorting"
                 android:layout_margin="12dp"
                 android:visibility="gone" />
 
@@ -249,7 +147,7 @@
                 android:id="@+id/imageScroll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/subInfo"
+                android:layout_below="@id/sorting"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="-2dp"
                 android:layout_marginEnd="6dp"
