--- a/app/src/main/res/layout/fragment_search_subs.xml
+++ b/app/src/main/res/layout/fragment_search_subs.xml
@@ -29,16 +29,20 @@
             android:inputType="text"
             android:padding="10dp"
             tools:ignore="LabelFor" />
-
-        <Button
+        <ImageButton
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:layout_weight="1"
+            android:src="@drawable/ic_search"
             android:background="@drawable/rounded_button"
-            android:text="Search"
             android:textColor="#FFFFFF" />
+
     </LinearLayout>
 
 
