--- a/app/src/main/res/layout/card_image.xml
+++ b/app/src/main/res/layout/card_image.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:id="@+id/image_holder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
             android:layout_centerInParent="true"
             android:scaleType="centerCrop"
             android:layout_gravity="center"
