--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -102,7 +102,7 @@
                 android:textColor="@color/textColor"
                 android:textSize="16sp" />
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -126,7 +126,18 @@
                     android:text="2x"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
-            </LinearLayout>
+            </LinearLayout>-->
+
+            <Switch
+                android:id="@+id/previewRes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:switchPadding="10dp"
+                android:text="Load lower resolution previews"
+                android:textColor="@color/textColor"
+                android:textSize="16sp"
+                android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
 
             <Switch
                 android:id="@+id/randomSwitch"
