--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/bottomColor" />
-    <corners android:radius="17dp" />
+    <corners
+        android:topLeftRadius="17dp"
+        android:topRightRadius="17dp" />
 </shape>
