--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -299,7 +299,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="28dp"
                     android:layout_marginBottom="25dp"
-                    android:onClick="launchSearch"
+                    android:onClick="copySubName"
                     android:text="Subreddit: "
                     android:textColor="@color/secondary"
                     android:textSize="18sp" />
